Fulfill checking lists of meeting rooms interaction. Ref #50

--- a/frontend/src/common/font/font.css
+++ b/frontend/src/common/font/font.css
@@ -1,8 +1,14 @@
 @font-face {
-  font-family: 'BuDingTi';
-  src: url('布丁体.ttf');
-  font-weight: normal;
-  font-style: normal;
+    font-family: Logo;
+    src: url('Anurati-Regular.otf');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'BuDingTi';
+    src: url('布丁体.ttf');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
